--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,13 +6,13 @@
         android:id="@+id/InputMenu"
         android:enabled="true"
         android:icon="@drawable/ic_add_circle_black_24dp"
-        android:title="Input Items"
+        android:title="Belongings"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/NewsMenu"
+        android:id="@+id/RoutineMenu"
         android:enabled="true"
         android:icon="@drawable/ic_markunread_mailbox_black_24dp"
-        android:title="News Today"
+        android:title="Routines"
         app:showAsAction="ifRoom" />
 
 </menu>
