--- a/app/src/main/res/layout/activity_input_items.xml
+++ b/app/src/main/res/layout/activity_input_items.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/etDestination"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Input_Tujuan" />
+                android:hint="Input Destination" />
         </android.support.design.widget.TextInputLayout>
     </android.support.v7.widget.CardView>
 
@@ -33,7 +33,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_small"
             android:layout_weight="1">
 
@@ -45,14 +45,14 @@
 
                 <EditText
                     android:id="@+id/etDepartDates"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
                     android:descendantFocusability="blocksDescendants"
                     android:focusable="false"
                     android:gravity="center"
-                    android:hint="Berangkat"
+                    android:hint="Pick Date"
                     android:padding="@dimen/spacing_medium" />
 
 
@@ -78,27 +78,55 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etDepartDateslReminderViews"
-                android:visibility="gone"
-                android:gravity="center"
+            <TextView
+                android:id="@+id/tvDepartDateslReminderViews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
-                android:layout_marginRight="@dimen/spacing_medium" />
+                android:layout_marginRight="@dimen/spacing_medium"
+                android:gravity="center"
+                android:visibility="gone" />
         </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/spacing_small"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_small"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnPickTag"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:padding="@dimen/spacing_medium"
+                    android:text="Select Tag" />
+
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <TextView
                 android:id="@+id/etArrivalReminderViews"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
-                android:layout_marginRight="@dimen/spacing_medium" />
+                android:layout_marginRight="@dimen/spacing_medium"
+                android:gravity="center"
+                android:visibility="gone" />
         </LinearLayout>
 
     </LinearLayout>
@@ -119,8 +147,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
-                android:layout_marginRight="@dimen/spacing_medium"
-                android:layout_marginTop="@dimen/spacing_medium">
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:layout_marginRight="@dimen/spacing_medium">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/etBarang"
@@ -128,14 +156,14 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:drawablePadding="8dp"
-                    android:gravity="top|left"
-                    android:hint="Input_Barang"
+                    android:gravity="top|start"
+                    android:hint="Input Items"
                     android:inputType="textMultiLine"
                     android:lines="8"
                     android:maxLines="10"
                     android:minLines="5"
-                    android:scrollHorizontally="false"
-                    android:scrollbars="vertical" />
+                    android:scrollbars="vertical"
+                    android:scrollHorizontally="false" />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
