--- a/app/src/main/res/layout/activity_input_routines.xml
+++ b/app/src/main/res/layout/activity_input_routines.xml
@@ -33,7 +33,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_small"
             android:layout_weight="1">
 
@@ -77,8 +77,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etRoutineDatesReminderViews"
+            <TextView
+                android:id="@+id/tvRoutineDatesReminderViews"
                 android:visibility="gone"
                 android:gravity="center"
                 android:layout_width="match_parent"
@@ -86,6 +86,33 @@
                 android:layout_marginLeft="@dimen/spacing_medium"
                 android:layout_marginRight="@dimen/spacing_medium" />
         </LinearLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/spacing_small"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_small"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnPickRoutineTag"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:padding="@dimen/spacing_medium"
+                    android:text="Select Tag" />
+
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
