adding network checker

--- a/app/src/main/res/layout/item_routines.xml
+++ b/app/src/main/res/layout/item_routines.xml
@@ -87,7 +87,8 @@
                             android:id="@+id/ivAlarmRoutineClock"
                             android:visibility="gone"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_alarm_blue_24dp"/>
                     </LinearLayout>
 
 
