--- a/app/src/main/res/layout/activity_input_items.xml
+++ b/app/src/main/res/layout/activity_input_items.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inputLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundcolor"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_medium">
+        android:layout_margin="@dimen/spacing_medium"
+        app:cardBackgroundColor="?attr/cardbackground">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:textColorHint="?attr/textcolor"
             android:layout_margin="@dimen/spacing_medium">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/etDestination"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Input Destination" />
+                android:hint="Input Destination"
+                android:textColor="?attr/textcolor"
+                 />
         </android.support.design.widget.TextInputLayout>
     </android.support.v7.widget.CardView>
 
@@ -35,7 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_small"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            app:cardBackgroundColor="?attr/cardbackground">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,11 +56,13 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:textColorHint="?attr/textcolor"
                     android:descendantFocusability="blocksDescendants"
                     android:focusable="false"
                     android:gravity="center"
                     android:hint="Pick Date"
-                    android:padding="@dimen/spacing_medium" />
+                    android:padding="@dimen/spacing_medium"
+                    android:textColor="?attr/textcolor" />
 
 
                 <android.support.v7.widget.SwitchCompat
@@ -79,6 +88,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="?attr/textcolor"
                 android:id="@+id/tvDepartDateslReminderViews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +102,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/spacing_small"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            app:cardBackgroundColor="?attr/cardbackground">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,7 +119,8 @@
                     android:background="@null"
                     android:gravity="center"
                     android:padding="@dimen/spacing_medium"
-                    android:text="Select Tag" />
+                    android:text="Select Tag"
+                    android:textColor="?attr/textcolor" />
 
             </LinearLayout>
 
@@ -135,7 +147,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_medium"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        app:cardBackgroundColor="?attr/cardbackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -148,7 +161,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
                 android:layout_marginTop="@dimen/spacing_medium"
-                android:layout_marginRight="@dimen/spacing_medium">
+                android:layout_marginRight="@dimen/spacing_medium"
+                android:textColorHint="?attr/textcolor">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/etBarang"
@@ -163,7 +177,8 @@
                     android:maxLines="10"
                     android:minLines="5"
                     android:scrollbars="vertical"
-                    android:scrollHorizontally="false" />
+                    android:scrollHorizontally="false"
+                    android:textColor="?attr/textcolor" />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
@@ -177,6 +192,7 @@
         android:layout_gravity="center|bottom"
         android:layout_margin="@dimen/spacing_medium"
         android:layout_weight="0"
+        android:background="?attr/buttoncolor"
         android:text="Submit" />
 
 </LinearLayout>
