--- a/app/src/main/res/layout/activity_main_pager.xml
+++ b/app/src/main/res/layout/activity_main_pager.xml
@@ -12,8 +12,9 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tabMainPage"
             android:layout_width="match_parent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
+            android:background="#2196F3"
             app:tabMode="fixed"
             app:tabSelectedTextColor="#ffffff" />
     </android.support.design.widget.AppBarLayout>
