--- a/app/src/main/res/layout/activity_output_items.xml
+++ b/app/src/main/res/layout/activity_output_items.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dc_lightestgray"
+    android:background="?attr/backgroundcolor"
     android:orientation="vertical">
 
-
     <android.support.design.widget.FloatingActionButton
+        app:rippleColor="?attr/buttoncolor"
         android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/spacing_huge"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/spacing_huge"
-        android:src="@drawable/ic_add_white_24dp" />
+        android:layout_marginBottom="@dimen/spacing_huge"
+        android:src="@drawable/ic_add_white_24dp"
+        app:layout_anchorGravity="bottom|right|end" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvInput"
