--- a/app/src/main/res/layout/item_header_drawer_layout.xml
+++ b/app/src/main/res/layout/item_header_drawer_layout.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@color/colorPrimaryDark"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     android:gravity="bottom"
+    android:background="?attr/backgroundcolor"
     android:orientation="vertical"
     android:padding="@dimen/spacing_medium"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -18,11 +18,11 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:textColor="?attr/textcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="My header title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/dc_white" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
 </LinearLayout>
