--- a/app/src/main/res/layout/item_output.xml
+++ b/app/src/main/res/layout/item_output.xml
@@ -7,12 +7,14 @@
     android:layout_marginLeft="@dimen/spacing_medium"
     android:layout_marginTop="@dimen/spacing_medium"
     android:layout_marginRight="@dimen/spacing_medium"
+    android:background="?attr/backgroundcolor"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="@dimen/letter_medium"
+        app:cardBackgroundColor="?attr/cardbackground"
         app:cardCornerRadius="4dp">
 
         <RelativeLayout
@@ -41,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:text="testing"
                     android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="?attr/textcolor"
                     android:textStyle="bold"
                     tools:text="Destiantion" />
 
@@ -50,6 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_small"
                     android:layout_marginBottom="10dp"
+                    android:textColor="?attr/textcolor"
                     android:textSize="12sp"
                     tools:text="items" />
 
@@ -73,6 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/spacing_small"
+                            android:textColor="?attr/textcolor"
                             android:visibility="gone"
                             tools:text="19/03/2018" />
 
@@ -81,6 +86,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/letter_small"
+                            android:textColor="?attr/textcolor"
                             android:visibility="gone"
                             tools:text="13:90" />
 
@@ -88,8 +94,8 @@
                             android:id="@+id/ivAlarmClock"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            android:src="@drawable/ic_alarm_blue_24dp" />
+                            android:src="@drawable/ic_alarm_blue_24dp"
+                            android:visibility="gone" />
                     </LinearLayout>
 
 
