--- a/app/src/main/res/layout/item_output_detail_items.xml
+++ b/app/src/main/res/layout/item_output_detail_items.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="?attr/backgroundcolor"
+    android:orientation="vertical"
+    app:cardBackgroundColor="?attr/backgroundcolor">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_medium">
+        android:layout_margin="@dimen/spacing_medium"
+        app:cardBackgroundColor="?attr/cardbackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,15 +26,17 @@
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="Destination"
                 android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="?attr/textcolor"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvTujuan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_medium"
                 android:layout_marginLeft="@dimen/spacing_large"
                 android:layout_marginRight="@dimen/spacing_large"
+                android:layout_marginBottom="@dimen/spacing_medium"
+                android:textColor="?attr/textcolor"
                 android:textSize="@dimen/letter_large"
                 tools:text="Tujuan" />
         </LinearLayout>
@@ -42,7 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/spacing_medium"
-        android:layout_marginRight="@dimen/spacing_medium">
+        android:layout_marginRight="@dimen/spacing_medium"
+        app:cardBackgroundColor="?attr/cardbackground">
 
 
         <LinearLayout
@@ -57,6 +64,7 @@
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="Date"
                 android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="?attr/textcolor"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -82,6 +90,7 @@
                     android:layout_gravity="right"
                     android:layout_marginLeft="@dimen/spacing_medium"
                     android:gravity="center"
+                    android:textColor="?attr/textcolor"
                     tools:text="19:30" />
             </LinearLayout>
 
@@ -89,6 +98,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_medium"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -102,6 +112,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/spacing_large"
                         android:text="Departure :"
+                        android:textColor="?attr/textcolor"
                         android:textStyle="bold" />
 
                     <TextView
@@ -109,6 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/spacing_medium"
+                        android:textColor="?attr/textcolor"
                         tools:text="Departure" />
                 </LinearLayout>
             </LinearLayout>
@@ -119,9 +131,10 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/spacing_medium"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        app:cardBackgroundColor="?attr/cardbackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -135,6 +148,7 @@
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="Items"
                 android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="?attr/textcolor"
                 android:textStyle="bold" />
 
             <TextView
@@ -143,6 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_large"
                 android:layout_marginRight="@dimen/spacing_large"
+                android:textColor="?attr/textcolor"
                 android:textSize="@dimen/letter_large"
                 tools:text="barang" />
         </LinearLayout>
