--- a/app/src/main/res/layout/item_output_detail_routines.xml
+++ b/app/src/main/res/layout/item_output_detail_routines.xml
@@ -3,9 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/backgroundcolor"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        app:cardBackgroundColor="?attr/cardbackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_medium">
@@ -21,10 +24,12 @@
                 android:layout_marginLeft="@dimen/spacing_large"
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="Routine"
+                android:textColor="?attr/textcolor"
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textStyle="bold" />
 
             <TextView
+                android:textColor="?attr/textcolor"
                 android:id="@+id/tvRoutineDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,6 +44,7 @@
 
 
     <android.support.v7.widget.CardView
+        app:cardBackgroundColor="?attr/cardbackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/spacing_medium"
@@ -51,6 +57,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="?attr/textcolor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_large"
@@ -76,6 +83,7 @@
                     android:src="@drawable/ic_alarms_gray_24dp" />
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:id="@+id/tvAlarmRoutineHours"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -87,6 +95,7 @@
 
 
             <LinearLayout
+                android:layout_marginBottom="@dimen/spacing_medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -98,6 +107,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:textColor="?attr/textcolor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/spacing_large"
@@ -105,6 +115,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:textColor="?attr/textcolor"
                         android:id="@+id/tvRoutineDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -119,6 +130,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
+        app:cardBackgroundColor="?attr/cardbackground"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_medium"
         android:layout_weight="1">
@@ -129,6 +141,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="?attr/textcolor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_large"
@@ -138,6 +151,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:textColor="?attr/textcolor"
                 android:id="@+id/tvRoutineDescriptionDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
