--- a/app/src/main/res/layout/activity_input_items.xml
+++ b/app/src/main/res/layout/activity_input_items.xml
@@ -21,6 +21,7 @@
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/etDestination"
+                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Input Destination"
