--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="pref_night_mode">true</bool>
+    <bool name="pref_night_mode">false</bool>
 </resources>
