adding animation in splashscreen - 3 dots - animation in & out for button switch activity - adding circular reveal animation - new style for circular reveal animation (need adjustmen for another activity) - fixing flow for input activity - (testing adding SharedFragmentListener for Settings Activity)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,10 @@
 
     </style>
 
+    <style name="CustomAccentOverlay" parent="ThemeOverlay.AppCompat">
+    <item name="colorAccent">@color/custom_accent</item>
+</style>
+
 </resources>
 
 <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
