--- a/app/src/main/res/layout/item_drawer_layout.xml
+++ b/app/src/main/res/layout/item_drawer_layout.xml
@@ -15,6 +15,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/background_light"
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
