--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="dc_black">#222222</color>
     <color name="bg_bubble_self">#E1E1E1</color>
     <color name="transparent">#00ff0000</color>
+    <color name="transparent_dots">#cccccc</color>
 
     <color name="dc_lightgray">#ffcccccc</color>
     <color name="dc_lightestgray">#e5eaec</color>
@@ -41,4 +42,6 @@
     <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
+    <color name="custom_accent">#03A9F4</color>
+
 </resources>
