adding new input tags

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -13,6 +13,9 @@
             android:id="@+id/NavNewsMenu"
             android:icon="@drawable/ic_books_white_24dp"
             android:title="News" />
+        <item
+            android:id="@+id/NavAddTags"
+            android:title="Add Tags" />
     </group>
     <item android:title="Preferences">
         <menu>
