--- a/app/src/main/res/layout/activity_main_pager_splash.xml
+++ b/app/src/main/res/layout/activity_main_pager_splash.xml
@@ -17,20 +17,11 @@
         android:id="@+id/tabDots"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/slideDots"
         android:layout_alignParentBottom="true"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
         app:tabIndicatorHeight="0dp" />
 
-    <LinearLayout
-        android:id="@+id/slideDots"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:gravity="right"
-        android:orientation="horizontal">
 
         <Button
             android:id="@+id/imBtnSplash"
@@ -38,8 +29,10 @@
             android:layout_width="100dp"
             android:layout_height="70dp"
             android:text="Lets Go"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:visibility="gone" />
 
-    </LinearLayout>
+
 
 </RelativeLayout>
