cleaning the code

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,9 +62,9 @@
 
     </style>
 
-    <style name="CustomAccentOverlay" parent="ThemeOverlay.AppCompat">
-    <item name="colorAccent">@color/custom_accent</item>
-</style>
+    <!--<style name="CustomAccentOverlay" parent="ThemeOverlay.AppCompat">-->
+    <!--<item name="colorAccent">@color/custom_accent</item>-->
+<!--</style>-->
 
 </resources>
 
