--- a/app/src/main/res/layout/activity_output_items.xml
+++ b/app/src/main/res/layout/activity_output_items.xml
@@ -3,8 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundcolor"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/backgroundcolor">
+
+    <LinearLayout
+        android:id="@+id/llEmptyData"
+        android:gravity="center"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Empty"/>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         app:rippleColor="?attr/buttoncolor"
@@ -21,7 +33,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvInput"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
