--- a/app/src/main/res/layout/item_output.xml
+++ b/app/src/main/res/layout/item_output.xml
@@ -69,8 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tvDateReminder"
@@ -78,7 +77,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/spacing_small"
                             android:textColor="?attr/textcolor"
-                            android:visibility="gone"
                             tools:text="19/03/2018" />
 
                         <TextView
@@ -87,7 +85,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/letter_small"
                             android:textColor="?attr/textcolor"
-                            android:visibility="gone"
                             tools:text="13:90" />
 
                         <ImageView
