cleaning the code adding iconpicker library + colorpicker library

--- a/app/src/main/res/layout/activity_input_items.xml
+++ b/app/src/main/res/layout/activity_input_items.xml
@@ -127,6 +127,7 @@
                     android:id="@+id/ivPicksIcon"
                     android:layout_width="79dp"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:src="@drawable/ic_style_gray_24dp" />
 
             </LinearLayout>
