--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -15,17 +15,27 @@
             android:layout_margin="@dimen/spacing_medium"
             android:orientation="horizontal">
 
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/ivTagsOnly"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="@dimen/spacing_medium" />
+
             <TextView
                 android:id="@+id/tvTags"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/ivTagsOnly"
                 tools:text="Testings" />
 
             <ImageView
                 android:id="@+id/ivDeleteTags"
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
                 android:src="@drawable/ic_clear_black_24dp" />
 
         </RelativeLayout>
