cleaning tag presenter code, adding powerfull network listener, adding intentfor in splashactivity,
(fail)
adding text size changer

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="DayAppTheme.NoActionBar">
+    <style name="DayAppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -17,7 +17,7 @@
     </style>
 
     <style name="AppTheme.Transparent" parent="AppTheme">
-        <!-- Style for the second activity -->
+         Style for the second activity
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
