--- a/app/src/main/res/layout/item_routines.xml
+++ b/app/src/main/res/layout/item_routines.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <ImageView
                 android:id="@+id/ivRoutineCircluar"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
