--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -15,7 +15,7 @@
             android:layout_margin="@dimen/spacing_medium"
             android:orientation="horizontal">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <ImageView
                 android:id="@+id/ivTagsOnly"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
