adding empty data controller in all adapter

--- a/app/src/main/res/layout/activity_output_routines.xml
+++ b/app/src/main/res/layout/activity_output_routines.xml
@@ -5,6 +5,23 @@
     android:background="?attr/backgroundcolor"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/llEmptyRoutine"
+        android:gravity="center"
+        android:visibility="visible"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="@dimen/spacing_medium"
+            android:src="@drawable/ic_event"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_routine"/>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabOutputRoutine"
