--- a/app/src/main/res/layout/activity_output_items.xml
+++ b/app/src/main/res/layout/activity_output_items.xml
@@ -10,12 +10,18 @@
         android:id="@+id/llEmptyData"
         android:gravity="center"
         android:visibility="visible"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="@dimen/spacing_medium"
+            android:src="@drawable/ic_luggage"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Empty"/>
+            android:text="@string/empty_item"/>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
